# agentic-rag-engine

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/corpus/: claims-adjudication.md  payments-settlement.md  rag-architecture.md  retail-pricing.md  trade-settlement.md
docs/: BRD.md  COST-SAVINGS.md  INDUSTRY-APPLICABILITY.md  NFR.md  SOP.md  SYSTEM-DESIGN.md
docs/adr/: 0001-hybrid-retrieval-with-rrf.md  0002-groundedness-guardrail.md  0003-pluggable-backends.md
eval/: dataset.jsonl  evaluate.py
src/discovery/: __init__.py  agent.py  api.py  bm25.py  documents.py  embeddings.py  fusion.py  generator.py  rag.py  rerank.py  retriever.py  vectorstore.py
tests/: test_bm25.py  test_fusion_embeddings.py  test_rag_and_agent.py
